# greenhouse-ai

./: .gitignore  README.md
api/: .env.example  generate_mock_images.py  main.py  pyproject.toml
api/mock_data/: analyzed_results.json  data.json  sensor_readings.json
api/models/: __init__.py  schemas.py
api/routes/: analysis.py
api/services/: context_service.py  mock_analyzer.py  openai_service.py  validator.py
api/utils/: cost_state.json  cost_tracker.py  logging_config.py  rate_limit_data.json  rate_limiter.py
docs/: ALERT_CRITERIA.md  SETUP.md
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/components/: AIAssessment.jsx  AlertBanner.jsx  AnalysisHistory.jsx  Dashboard.jsx  ImageUpload.jsx  SensorReadings.jsx
ui/src/pages/: AnalysisDetail.jsx  AnalysisList.jsx
ui/src/services/: api.js
ui/src/utils/: formatters.js
